heroku deploy with travis fix

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "coverage": "jest --coverage",
-    "tslint": "tslint --project ./src",
+    "jest-coverage": "jest --coverage",
+    "tslint": "tslint --project .",
     "compile": "tsc -p ./tsconfig.json",
     "deploy": "./deploy.sh",
     "start": "node ./dist/src/index.js"
