--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --detectOpenHandles",
+    "test": "npm run jest",
+    "jest": "jest --detectOpenHandles",
     "jest-coverage": "jest --coverage",
     "tslint": "tslint --project .",
     "compile": "tsc -p ./tsconfig.json",
