--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "jest-coverage": "jest --coverage",
     "tslint": "tslint --project .",
     "compile": "tsc -p ./tsconfig.json",
-    "start": "node ./dist/src/index.js"
+    "start": "node ./dist/src/index.js",
+    "deploy": "./deploy.sh"
   },
   "repository": {
     "type": "git",
