--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run tslint && npm run compile && ls",
+    "test": "npm run tslint && npm run compile && ls /app",
     "jest": "jest --detectOpenHandles",
     "jest-coverage": "jest --coverage",
     "tslint": "tslint --project .",
