fix travis heroku creds

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ deploy:
   provider: heroku
   app: $HEROKU_APP_NAME
   api_key:
-    secure: "$HEROKU_API_KEY"
+    secure: $HEROKU_API_KEY
   on:
     branch: master
 
