--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,10 @@ deploy:
   provider: heroku
   app: $HEROKU_APP_NAME
   api_key:
-    secure: '$HEROKU_API_KEY'
+    secure: $HEROKU_API_KEY
   on:
     branch: master
+
+    
 
     
