--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "turbulent-test",
+  "name": "a-ws-service",
   "version": "1.0.0",
-  "description": "",
+  "description": "Small simple service using websockets to handle event reminders",
   "main": "index.js",
   "scripts": {
     "test": "npm run tslint && npm run compile",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/blzjns/a-ws-service"
   },
   "author": "Jonas Hoehne-Silva",
   "license": "ISC",
@@ -29,8 +29,7 @@
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
     "tslint": "^5.12.0",
-    "typescript": "^3.6.4",
-    "mock-socket": "^9.0.2"
+    "typescript": "^3.6.4"
   },
   "dependencies": {
     "pouchdb": "^7.1.1",
